# lilypad

./: .codespellrc  .example.dev.vars  .example.env.local  .gitguardian.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  bunfig.toml  components.json  database.db  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  eslint.config.ts  index.html  macros.py  mkdocs.yml  nixpacks.toml  objects.inv  package.json  playground-deps.txt  playground-requirements.txt  pyproject.toml  run.sh  sitemap.xml  tsconfig.json  user_config.toml  vite.config.ts  vitest.config.ts  wrangler.toml
sdks/python/: LICENSE  Makefile  README.md  conftest.py  lilypad_README.md  pyproject.toml
sdks/python/.openapi-generator/: FILES
sdks/python/docs/: distributed-tracing.md
sdks/python/examples/: auto_instrumentation_demo.py  auto_instrumentation_example.py  instrument_anthropic_with_console.py  instrument_azure_with_console.py  instrument_google_with_console.py  instrument_mistral_with_console.py  instrument_openai_with_console.py
sdks/python/lilypad/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdks/python/lilypad/api/: __init__.py  annotations_api.py  api_keys_api.py  billing_api.py  comments_api.py  environments_api.py  external_api_keys_api.py  functions_api.py  git_hub_api.py  google_api.py  organization_invites_api.py  organizations_api.py  projects_api.py  settings_api.py  spans_api.py  tags_api.py  traces_api.py  user_consents_api.py  user_organizations_api.py  users_api.py
sdks/python/lilypad/docs/: APIKeyCreate.md  APIKeyPublic.md  APIKeysApi.md  AggregateMetrics.md  AnnotationCreate.md  AnnotationMetrics.md  AnnotationPublic.md  AnnotationUpdate.md  AnnotationsApi.md  ArgValuesValue.md  AudioPart.md  BillingApi.md  CommentCreate.md  CommentPublic.md  CommentUpdate.md  CommentsApi.md  CommonCallParams.md  CreateUserOrganizationToken.md  DependencyInfo.md  DeploymentPublic.md  EnvironmentCreate.md  EnvironmentPublic.md  EnvironmentsApi.md  EvaluationType.md  Event.md  ExternalAPIKeyCreate.md  ExternalAPIKeyPublic.md  ExternalAPIKeyUpdate.md  ExternalAPIKeysApi.md  FunctionCreate.md  FunctionPublic.md  FunctionsApi.md  GitHubApi.md  GoogleApi.md  HTTPValidationError.md  ImagePart.md  Label.md  LicenseInfo.md  MessageParam.md  MessageParamContentInner.md  (+50 more)
sdks/python/lilypad/models/: __init__.py  aggregate_metrics.py  annotation_create.py  annotation_metrics.py  annotation_public.py  annotation_update.py  api_key_create.py  api_key_public.py  arg_values_value.py  audio_part.py  comment_create.py  comment_public.py  comment_update.py  common_call_params.py  create_user_organization_token.py  dependency_info.py  deployment_public.py  environment_create.py  environment_public.py  evaluation_type.py  event.py  external_api_key_create.py  external_api_key_public.py  external_api_key_update.py  function_create.py  function_public.py  http_validation_error.py  image_part.py  label.py  license_info.py  message_param.py  message_param_content_inner.py  organization_create.py  organization_invite_create.py  organization_invite_public.py  organization_public.py  organization_update.py  paginated_span_public.py  playground_error_detail.py  playground_error_response.py  (+32 more)
sdks/python/lilypad/test/: test_aggregate_metrics.py  test_annotation_create.py  test_annotation_metrics.py  test_annotation_public.py  test_annotation_update.py  test_annotations_api.py  test_api_key_create.py  test_api_key_public.py  test_api_keys_api.py  test_arg_values_value.py  test_audio_part.py  test_billing_api.py  test_comment_create.py  test_comment_public.py  test_comment_update.py  test_comments_api.py  test_common_call_params.py  test_create_user_organization_token.py  test_dependency_info.py  test_deployment_public.py  test_environment_create.py  test_environment_public.py  test_environments_api.py  test_evaluation_type.py  test_event.py  test_external_api_key_create.py  test_external_api_key_public.py  test_external_api_key_update.py  test_external_api_keys_api.py  test_function_create.py  test_function_public.py  test_functions_api.py  test_git_hub_api.py  test_google_api.py  test_http_validation_error.py  test_image_part.py  test_label.py  test_license_info.py  test_message_param.py  test_message_param_content_inner.py  (+50 more)
sdks/python/src/: __init__.py  client.py  environment.py
sdks/python/src/api_keys/: client.py
sdks/python/src/auth/: client.py  raw_client.py
sdks/python/src/comments/: client.py  raw_client.py
sdks/python/src/environments/: client.py  raw_client.py
sdks/python/src/errors/: bad_request_error.py
sdks/python/src/external_api_keys/: client.py  raw_client.py
sdks/python/src/lib/: __init__.py  _configure.py  sessions.py  traces.py
sdks/python/src/lilypad/: __init__.py  _configure.py  client.py  configuration.py  context_managers.py  errors.py  exceptions.py  messages.py  raw_client.py  sessions.py  spans.py  stream.py  (+4 more)
sdks/python/tests/: conftest.py  test_client_coverage.py  test_closure.py  test_closure_missing_coverage.py  test_configure.py  test_configure_propagator.py  test_connection_error.py  test_context_managers.py  test_decorator_edge_cases.py  test_exact_missing_lines.py  test_exceptions.py  test_final_179_lines.py  test_final_1_percent.py  test_final_coverage_push.py  test_force_100_coverage.py  test_force_100_simple.py  test_local.py  test_messages.py  test_middleware_missing_coverage.py  test_placeholder.py  test_sandbox_coverage.py  test_sessions.py  test_simple_coverage.py  test_spans.py  test_spans_100_percent_coverage.py  test_spans_coverage.py  test_spans_final_coverage.py  test_sync.py  test_sync_100_percent_coverage.py  test_sync_missing_coverage.py  test_tools.py  test_traces.py  test_traces_100_percent_coverage.py  test_traces_additional.py  test_traces_advanced_coverage.py  test_traces_coverage.py  test_traces_decorator.py  test_traces_methods.py  test_traces_mirascope_coverage.py  test_traces_missing_coverage.py  (+4 more)
(+2282 files in other folders)
